Changed Java version to 1.8.